Try specifying jdk 11 on gradle options to support new args